# kontakt_home_task

./: .env  .gitignore  debug_output.txt  pyrightconfig.json
task1/: .dockerignore  .env.example  .gitignore  .pyre_configuration  Dockerfile  README.md  debug_path.py  docker-compose.yml  evaluate.py  folder_structure.txt  out.json  pyproject.toml  pyrightconfig.json  requirements.txt  sample.json
task1/.github/workflows/: ci.yml
task1/docs/: Task-1.docx  Task_1_Eval_dataset.json
task1/prompts/: kr2_scoring.yaml  kr_scoring_system_prompt.yaml
task1/src/: main.py
task1/src/kontakt_qc/: __init__.py  cli.py  hybrid.py  llm.py  pipeline.py  preprocess.py  prompt_loader.py  rules.py  types.py
task1/src/qc_service/: __init__.py  api.py  config.py  evaluator.py  logging_setup.py  models.py  pii.py  preprocess.py
task1/src/qc_service/llm/: groq_client.py  prompts.py
task1/src/qc_service/rules/: kr2.py
task1/tests/: conftest.py  test_dataset_accuracy.py  test_hallucination_guard.py  test_multilang_and_callback.py  test_pii_masking.py  test_robust_parsing.py  test_rules_smoke.py  test_short_guard.py  test_smoke.py
task2/: .gitignore  Dockerfile  README.md  docker-compose.yml  reinstall_log.txt  reinstall_v2_log.txt  requirements.txt
task2/app/: asr.py  main.py
task2/artifacts/: benchmark_report.md
task2/locust/: locustfile.py
task2/scripts/: benchmark.py  export.py  quantize.py  train.py
task3/: .env.example  .gitignore  README.md  ner_train_data.json  pyproject.toml  requirements.txt
task3/notebooks/: 01_explore_datasets.ipynb  03_train_ner.ipynb  (+2 more)
(+26 files in other folders)
